Mod: padding and margin to 0

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <style>
       * {
         overflow: hidden;
+        padding: 0;
+        margin: 0;
       }
       .main {
         padding: 0;
