--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="24 考研 简洁的考研倒计时 kaoyan1234" />
+    <meta name="robots" content="index" />
     <title>2024 考研倒计时</title>
     <link rel="stylesheet" href="./flip/flip.min.css" />
   </head>
