--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <title>2024 考研倒计时</title>
     <link rel="stylesheet" href="./flip/flip.min.css" />
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3RFRPBN7QN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3RFRPBN7QN');
+  </script>
   <body>
     <style>
       * {
